add_library(study
aes.c
args.c
args_parse.c
base64.c
bitmessage.c
bitset.c
bm.c
bmapi.c
chainCookies.c
changebase.c
charset-convert.c
epsp-parser.c
gettext.h
internal_bitset.h
internal_queue.h
internal_random.h
internal-string-array.h
internal-string-list.h
java_random.c
md5.c
minecraft.c
nlz.c
numsys.c
orz.c
printaddrinfo.c
printint.c
queue.c
random.c
sha-1.c
sha-2.c
sha-3.c
sha.c
string-array.c
string-joiner.c
string-list.c
strjoin.c
study.c
svgplot.c
xmlrpc.c
xorshift.c
)
