add_library(study
args.c
args_parse.c
base64.c
bitmessage.c
bitset.c
bm_crypto.c
bm_network.c
bm_protocol.c
bm_sonota.c
bm_storage.c
bm_queue.c
bmapi.c
chainCookies.c
changebase.c
charset-convert.c
crlffd.c
epsp-parser.c
genackpayload.c
internal_bitset.h
internal_queue.h
internal_random.h
internal-string-array.h
internal-string-list.h
java_random.c
md5.c
minecraft.c
nlz.c
numsys.c
orz.c
printaddrinfo.c
printint.c
queue.c
random.c
sha-1.c
sha-2.c
sha-3.c
sha.c
shuffle.c
string-array.c
string-joiner.c
string-list.c
strjoin.c
study.c
svgplot.c
xmlrpc.c
xorshift.c
)
target_link_libraries(study ${OPENSSL_CRYPTO_LIBRARIES} GnuTLS::GnuTLS xmlrpc xmlrpc_client SQLite::SQLite3)
target_include_directories(study PRIVATE ${OPENSSL_INCLUDE_DIR} $<$<BOOL:${GNUTLS_FOUND}>:${GNUTLS_INCLUDE_DIR}>)
target_compile_definitions(study PRIVATE $<$<BOOL:${GNUTLS_FOUND}>:${GNUTLS_DEFINITIONS}>)
