lib_LTLIBRARIES  =
lib_LTLIBRARIES += libstudy.la

libstudy_la_SOURCES  =
libstudy_la_SOURCES += aes.c
libstudy_la_SOURCES += arg.c
libstudy_la_SOURCES += arg_parse.c
libstudy_la_SOURCES += base64.c
libstudy_la_SOURCES += internal_random.h
libstudy_la_SOURCES += java_random.c
libstudy_la_SOURCES += md5.c
libstudy_la_SOURCES += numsys.c
libstudy_la_SOURCES += orz.c
libstudy_la_SOURCES += print_addrinfo.c
libstudy_la_SOURCES += printint.c
libstudy_la_SOURCES += queue.c
libstudy_la_SOURCES += random.c
libstudy_la_SOURCES += sha.c
libstudy_la_SOURCES += sha-1.c
libstudy_la_SOURCES += sha-2.c
libstudy_la_SOURCES += sha-3.c
libstudy_la_SOURCES += string_array.c
libstudy_la_SOURCES += string_joiner.c
libstudy_la_SOURCES += string_list.c
libstudy_la_SOURCES += study.c
libstudy_la_SOURCES += svgplot.c

AM_CPPFLAGES = -I$(srcdir)/.. $(top_srcdir)/include $(all_includes)
