lib_LTLIBRARIES  =
lib_LTLIBRARIES += libstudy.la

libstudy_la_SOURCES  =
libstudy_la_SOURCES += aes.c
libstudy_la_SOURCES += args.c
libstudy_la_SOURCES += args_parse.c
libstudy_la_SOURCES += base64.c
libstudy_la_SOURCES += bitmessage.c
libstudy_la_SOURCES += bitset.c
libstudy_la_SOURCES += bm.c
libstudy_la_SOURCES += bmapi.c
libstudy_la_SOURCES += changebase.c
libstudy_la_SOURCES += charset-convert.c
libstudy_la_SOURCES += epsp-parser.c
libstudy_la_SOURCES += gettext.h
libstudy_la_SOURCES += internal_bitset.h
libstudy_la_SOURCES += internal_queue.h
libstudy_la_SOURCES += internal_random.h
libstudy_la_SOURCES += internal_string_array.h
libstudy_la_SOURCES += internal_string_list.h
libstudy_la_SOURCES += java_random.c
libstudy_la_SOURCES += md5.c
libstudy_la_SOURCES += minecraft.c
libstudy_la_SOURCES += numsys.c
libstudy_la_SOURCES += orz.c
libstudy_la_SOURCES += print_addrinfo.c
libstudy_la_SOURCES += printint.c
libstudy_la_SOURCES += queue.c
libstudy_la_SOURCES += random.c
libstudy_la_SOURCES += sha-1.c
libstudy_la_SOURCES += sha-2.c
libstudy_la_SOURCES += sha-3.c
libstudy_la_SOURCES += sha.c
libstudy_la_SOURCES += string_array.c
libstudy_la_SOURCES += string_joiner.c
libstudy_la_SOURCES += string_list.c
libstudy_la_SOURCES += strjoin.c
libstudy_la_SOURCES += study.c
libstudy_la_SOURCES += svgplot.c
libstudy_la_SOURCES += xmlrpc.c
libstudy_la_SOURCES += xorshift.c

## "本当に"これが正しいんですか？
AM_CPPFLAGS =-Wall -Wextra -Wdisabled-optimization -I$(top_srcdir)/include -DLOCALEDIR='"$(localedir)"'
