lib_LTLIBRARIES  = \
                libstudy.la

libstudy_la_SOURCES  = \
                aes.c \
                args.c \
                args_parse.c \
                base64.c \
                bitmessage.c \
                bitset.c \
                bm.c \
                bmapi.c \
                chainCookies.c \
                changebase.c \
                charset-convert.c \
                epsp-parser.c \
                gettext.h \
                internal_bitset.h \
                internal_queue.h \
                internal_random.h \
                internal_string_array.h \
                internal_string_list.h \
                java_random.c \
                md5.c \
                minecraft.c \
                nlz.c \
                numsys.c \
                orz.c \
                print_addrinfo.c \
                printint.c \
                queue.c \
                random.c \
                sha-1.c \
                sha-2.c \
                sha-3.c \
                sha.c \
                string_array.c \
                string_joiner.c \
                string_list.c \
                strjoin.c \
                study.c \
                svgplot.c \
                xmlrpc.c \
                xorshift.c

## "本当に"これが正しいんですか？
AM_CPPFLAGS =-Wall -Wextra -pedantic -Wcast-align -Wcast-qual -Wconversion -Wdisabled-optimization -Wendif-labels -Wfloat-equal -Winit-self -Winline -Wlogical-op -Wmissing-include-dirs -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wswitch-default -Wswitch-enum -Wunsafe-loop-optimizations -Wvariadic-macros -Wwrite-strings -I$(top_srcdir)/include -DLOCALEDIR='"$(localedir)"'
